--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <!-- Delay -->
               <!--------------------------------------------------------------------->
               <p id="delay-title" class="subtitle">Delay</p>
-              <div id="delay-content">
+              <div id="delay-content" style="display: none;">
                 <!--------------------------------------------------------------------->
                 <!-- Feedback Delay -->
                 <!--------------------------------------------------------------------->
