--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       content="music, midi, sound, synthesizer, sound-processing, synth, piano, 
       synthesizers, software-synthesizer, subtractive-synthesis, midi-keyboard, 
       fm-synthesizer, piano-keyboard, sound-synthesis, nexusui, frequency-modulation, 
-      tonejs, knobs, fm-synthesis, sound-engineering"
+      tonejs, web-audio, fm-synthesis, sound-engineering"
     />
     <meta name="author" content="Michael Kolesidis" />
 
