--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./assets/logo/favicon.ico" />
     <link rel="apple-touch-icon" href="./assets/logo/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/jss.webmanifest" />
   </head>
 
   <body>
