--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
   </head>
 
   <body>
+    <div id="splash-screen">
+      <img src="./assets/logo/logo512.png" alt="">
+    </div>
     <div id="page-container">
       <div id="content-wrap">
         <!--------------------------------------------------------------------->
