help provision,effects refactoring and addition

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <body>
     <div id="splash-screen">
-      <img src="./assets/logo/logo512.png" alt="">
+      <img src="./assets/logo/logo512.png" alt="" />
     </div>
     <div id="page-container">
       <div id="content-wrap">
@@ -209,6 +209,15 @@
                 <p id="vibrato-title" class="subtitle">Vibrato</p>
                 <div id="vibrato-content">
                   <div id="vibrato-toggle"></div>
+                </div>
+              </div>
+              <!--------------------------------------------------------------------->
+              <!-- Vibrato -->
+              <!--------------------------------------------------------------------->
+              <div id="phaser">
+                <p id="phaser-title" class="subtitle">Phaser</p>
+                <div id="phaser-content">
+                  <div id="phaser-toggle"></div>
                 </div>
               </div>
               <!--------------------------------------------------------------------->
