--- a/index.html
+++ b/index.html
@@ -136,62 +136,62 @@
                   </div>
                 </div>
               </div>
-              <!--------------------------------------------------------------------->
-              <!-- Delay -->
-              <!--------------------------------------------------------------------->
-              <div id="delay">
-                <p id="delay-title" class="subtitle">Delay</p>
-                <div id="delay-content" style="display: none">
-                  <!--------------------------------------------------------------------->
-                  <!-- Feedback Delay -->
-                  <!--------------------------------------------------------------------->
-                  <div id="feedback-delay">
-                    <p id="feedback-delay-title" class="subtitle-s">
-                      Feedback Delay
-                    </p>
-                    <div id="feedback-delay-content">
-                      <div id="feedback-delay-toggle"></div>
-                      <div class="component">
-                        <p class="label">Delay Time</p>
-                        <div id="feedback-delay-time"></div>
-                        <br />
-                        <div id="feedback-delay-time-num"></div>
-                      </div>
 
-                      <div class="component">
-                        <p class="label">Feedback</p>
-                        <div id="feedback-delay-feedback"></div>
-                        <br />
-                        <div id="feedback-delay-feedback-num"></div>
-                      </div>
-                    </div>
+              <!--------------------------------------------------------------------->
+              <!-- Feedback Delay -->
+              <!--------------------------------------------------------------------->
+              <div id="feedback-delay">
+                <p id="feedback-delay-title" class="subtitle">
+                  Feedback Delay
+                </p>
+                <div id="feedback-delay-content">
+                  <div id="feedback-delay-toggle"></div>
+
+                  <div id="feedback-delay-components">
+                  <div class="component">
+                    <p class="label">Delay Time</p>
+                    <div id="feedback-delay-time"></div>
+                    <br />
+                    <div id="feedback-delay-time-num"></div>
                   </div>
-                  <!--------------------------------------------------------------------->
-                  <!-- Ping Pong Delay -->
-                  <!--------------------------------------------------------------------->
-                  <div id="ping-pong">
-                    <p id="ping-pong-delay-title" class="subtitle-s">
-                      Ping Pong Delay
-                    </p>
-                    <div id="ping-pong-delay-content">
-                      <div id="ping-pong-delay-toggle"></div>
-                      <div class="component">
-                        <p class="label">Delay Time</p>
-                        <div id="ping-pong-delay-time"></div>
-                        <br />
-                        <div id="ping-pong-delay-time-num"></div>
-                      </div>
 
-                      <div class="component">
-                        <p class="label">Feedback</p>
-                        <div id="ping-pong-delay-feedback"></div>
-                        <br />
-                        <div id="ping-pong-delay-feedback-num"></div>
-                      </div>
+                  <div class="component">
+                    <p class="label">Feedback</p>
+                    <div id="feedback-delay-feedback"></div>
+                    <br />
+                    <div id="feedback-delay-feedback-num"></div>
+                  </div>
+                  </div>
+
+                </div>
+              </div>
+              <!--------------------------------------------------------------------->
+              <!-- Ping Pong Delay -->
+              <!--------------------------------------------------------------------->
+              <div id="ping-pong">
+                <p id="ping-pong-delay-title" class="subtitle">
+                  Ping Pong Delay
+                </p>
+                <div id="ping-pong-delay-content">
+                  <div id="ping-pong-delay-toggle"></div>
+                  <div id="ping-pong-delay-components">
+                    <div class="component">
+                      <p class="label">Delay Time</p>
+                      <div id="ping-pong-delay-time"></div>
+                      <br />
+                      <div id="ping-pong-delay-time-num"></div>
+                    </div>
+
+                    <div class="component">
+                      <p class="label">Feedback</p>
+                      <div id="ping-pong-delay-feedback"></div>
+                      <br />
+                      <div id="ping-pong-delay-feedback-num"></div>
                     </div>
                   </div>
                 </div>
               </div>
+
               <!--------------------------------------------------------------------->
               <!-- Reverb -->
               <!--------------------------------------------------------------------->
