--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p id="feedback-delay-title" class="subtitle">
                   Feedback Delay
                 </p>
-                <div id="feedback-delay-content">
+                <div id="feedback-delay-content" style="display: none">
                   <div id="feedback-delay-toggle"></div>
 
                   <div id="feedback-delay-components">
@@ -172,7 +172,7 @@
                 <p id="ping-pong-delay-title" class="subtitle">
                   Ping Pong Delay
                 </p>
-                <div id="ping-pong-delay-content">
+                <div id="ping-pong-delay-content" style="display: none">
                   <div id="ping-pong-delay-toggle"></div>
                   <div id="ping-pong-delay-components">
                     <div class="component">
